--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -57,13 +57,15 @@
 
                     TextCanvas7 As Text:
                         DisplayMode: =DisplayMode.Edit
+                        Font: =Font.'Open Sans'
+                        FontColor: =RGBA(25, 33, 83, 1)
                         Height: =45
                         Size: =30
-                        Text: ="Approval History"
-                        Weight: ='TextCanvas.Weight'.Semibold
+                        Text: ="APPROVAL HISTORY"
+                        Weight: ='TextCanvas.Weight'.Bold
                         Width: =356
                         X: =15
-                        Y: =42
+                        Y: =33
                         ZIndex: =1
 
                 "ApprovalsAPFGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
@@ -178,8 +180,8 @@
                         Height: =32
                         Text: =ThisItem.ID
                         Width: =96
-                        X: =4
-                        Y: =34
+                        X: =13
+                        Y: =16
                         ZIndex: =13
 
                     ButtonCanvas5 As Button:
@@ -331,6 +333,16 @@
                             Y: =88
                             ZIndex: =8
 
+                TextCanvas11 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =96
+                    Width: =96
+                    X: =0
+                    Y: =0
+                    ZIndex: =12
+
     HP_TSKBR_2 As TSKBR:
         NavigationItems: =gblNavItems
         ZIndex: =2
@@ -361,7 +373,8 @@
             CloseDialogueBox As icon.Cancel:
                 Icon: =Icon.Cancel
                 OnSelect: =Set(openApprovalScreen,false)
-                Width: =30
+                PaddingRight: =10
+                Width: =40
                 ZIndex: =1
 
             DropdownCanvas1 As Dropdown.pcfdataset:
@@ -421,4 +434,40 @@
                     X: =0
                     Y: =0
                     ZIndex: =2
+
+    Container25 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(25, 33, 83, 1)
+        Height: =45
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =1001
+        X: =27
+        Y: =186
+        ZIndex: =4
+
+        TextCanvas12 As Text:
+            DisplayMode: =DisplayMode.Edit
+            FontColor: =RGBA(255, 255, 255, 1)
+            Height: =32
+            Size: =18
+            Text: ="ID"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =96
+            X: =9
+            Y: =6
+            ZIndex: =1
+
+        TextCanvas12_1 As Text:
+            DisplayMode: =DisplayMode.Edit
+            FontColor: =RGBA(255, 255, 255, 1)
+            Height: =32
+            Size: =18
+            Text: ="ID"
+            Weight: ='TextCanvas.Weight'.Semibold
+            Width: =96
+            X: =53
+            Y: =6
+            ZIndex: =2
 
