--- a/SAO-EP/Src/View APF.fx.yaml
+++ b/SAO-EP/Src/View APF.fx.yaml
@@ -69,8 +69,9 @@
 
             OrgNameContainer_2 As groupContainer.horizontalAutoLayoutContainer:
                 Fill: =RGBA(245, 245, 245, 1)
-                FillPortions: =0
+                FillPortions: =0.24
                 Height: =65
+                LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
@@ -78,10 +79,60 @@
 
                 Label3_2 As label:
                     Align: =Align.Center
+                    AlignInContainer: =AlignInContainer.Stretch
+                    FillPortions: =1
+                    FontWeight: =FontWeight.Bold
                     Height: =Parent.Height
+                    LineHeight: =1
+                    Size: =10
                     Text: =flowResponse.responsemsg
+                    Visible: |-
+                        =//If(IsBlank(flowResponse),false,true)
+                        true
                     Width: =Parent.Width
                     ZIndex: =1
+
+                FilterYearCont As groupContainer.horizontalAutoLayoutContainer:
+                    Height: =Parent.Height - Label2_3.Height
+                    LayoutMinHeight: =Parent.Height-Label3_2.Height
+                    LayoutMinWidth: =250
+                    LayoutMode: =LayoutMode.Auto
+                    ZIndex: =4
+
+                    AcadYearSelector_2 As dropdown:
+                        AlignInContainer: =AlignInContainer.Stretch
+                        AllowEmptySelection: =true
+                        ChevronBackground: =RGBA(39, 113, 194, 1)
+                        Color: =
+                        Default: ="0"
+                        FillPortions: =0.75
+                        Height: =Parent.Height
+                        Items: =Distinct(CalDeets, AcadYear)
+                        LayoutMinHeight: =20
+                        LayoutMinWidth: =135
+                        Reset: =true
+                        Width: =50
+                        ZIndex: =1
+
+                    Icon20 As icon.VerticalLine:
+                        Icon: =Icon.VerticalLine
+                        Width: =20
+                        ZIndex: =2
+
+                    AY_AllBtn_2 As Button:
+                        Align: =Align.Center
+                        DisplayMode: =DisplayMode.Edit
+                        FillPortions: =0.25
+                        Height: =Parent.Height
+                        LayoutMinHeight: =32
+                        LayoutMinWidth: =20
+                        OnSelect: =Reset(AcadYearSelector_2)
+                        Text: ="All"
+                        Width: |
+                            =30
+                        X: =0
+                        Y: =0
+                        ZIndex: =3
 
             NewRecordButtonBarContainer1_2 As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.Light
@@ -207,13 +258,25 @@
                 Default: =CurrentItem
                 DelayItemLoading: =true
                 Fill: =RGBA(250, 250, 250, 1)
-                Items: |+
-                    =Search(Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym && IsApproved = true),SearchInput1_2.Text, Title, 'Activity Title')
-                    
-                    //Search(Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym),SearchInput1_2.Text, Title, 'Activity Title')
-                    
-                    //Search(Filter('APF Uploads','Name of Lead Org' = "<insert_orgname_here>"),SearchInput1.Text, "Title", "Title")
-                    
+                Items: |-
+                    =Search(
+                        Filter(
+                            'APF Uploads',
+                            'Name of Lead Org' = CurrentUserOrg.orgAcronym,
+                            (
+                                IsBlank(AcadYearSelector_2.Selected.Value) || // Check if Dropdown4 is blank
+                                If(
+                                    Month(DateValue('Target Date')) = 8 || Month(DateValue('Target Date')) > 8,
+                                    Text(Year(DateValue('Target Date')), "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')) + 1, "[$-en-US]0"),
+                                    Text(Year(DateValue('Target Date')) - 1, "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')), "[$-en-US]0")
+                                ) = AcadYearSelector_2.Selected.Value // Compare derived academic year with selected value
+                            ) &&
+                            'IsApproved' = true
+                        ),
+                        SearchInput1_2.Text,
+                        Title,
+                        'Activity Title'
+                    )
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =0
