--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1277,7 +1277,20 @@
                                 CountRows(Master_Data), 
                                 If(
                                     IsBlank(OrgSelectorReport.SelectedText.'data-ADB4D7A662F548B49FAC2B986E348A1BorgName'), 
-                                    CountRows(Master_Data), 
+                                    If(
+                                        IsBlank(AcadYearSelector3.SelectedText.Value), 
+                                        CountRows(Master_Data), // Count all if both are blank
+                                        CountIf(
+                                            Master_Data,
+                                            (
+                                                If(
+                                                    Month(DateValue('Target_x0020_Date')) = 8 || Month(DateValue('Target_x0020_Date')) > 8,
+                                                    Text(Year(DateValue('Target_x0020_Date')), "[$-en-US]0") & "-" & Text(Year(DateValue('Target_x0020_Date')) + 1, "[$-en-US]0"),
+                                                    Text(Year(DateValue('Target_x0020_Date')) - 1, "[$-en-US]0") & "-" & Text(Year(DateValue('Target_x0020_Date')), "[$-en-US]0")
+                                                ) = AcadYearSelector3.SelectedText.Value
+                                            )
+                                        )
+                                    ), 
                                     CountIf(
                                         Master_Data,
                                         NameofLeadOrg = OrgSelectorReport.SelectedText.'data-ADB4D7A662F548B49FAC2B986E348A1BorgName' &&
